--- a/bluebliss.css
+++ b/bluebliss.css
@@ -18,7 +18,7 @@ body
 {
   font-size: 8pt; 
   font-family: Tahoma, Verdana, sans-serif; 
-  color: #000000;
+  color: #FFA500;
   text-align: left;
 }
 
