--- a/bluebliss.css
+++ b/bluebliss.css
@@ -113,7 +113,7 @@ width:560px;
 {
 	position: absolute;
 	vertical-align: middle;
-	background-color:#E7EDF8;
+	background-color:#FFA500;
 	width:600px;
 	clear:both;
 }
