--- a/bluebliss.css
+++ b/bluebliss.css
@@ -122,7 +122,7 @@ width:560px;
 {
 width:600px;
 height:20px;
-background-color:#FFFFFF;
+background-color:#FFA500;
 background-image:url(header.gif);
 background-repeat:no-repeat;
 }
@@ -131,7 +131,7 @@ background-repeat:no-repeat;
 {
 width:600px;
 height:20px;
-background-color:#FFFFFF;
+background-color:#FFA500;
 background-image:url(footer.gif);
 background-repeat:no-repeat;
 text-align:center;
